--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,12 +1,11 @@
-
-
-/* Base reset */
+/* The general style was based off the FCC portfolio example and changed to adopt personal preferences. Originally coded by @lasjorg
+*/
 * {
   margin: 0;
   padding: 0;
 }
 
-/* box-sizing and font sizing */
+
 *,
 *::before,
 *::after {
@@ -17,52 +16,35 @@ html {
   box-sizing: border-box;
 
   /* Set font size for easy rem calculations*/
-
+ 
   font-size: 10px;
   scroll-behavior: smooth;
 }
 
-/* A few media query to set some font sizes at different screen sizes.
- * This helps automate a bit of responsiveness.
- * The trick is to use the rem unit for size values, margin and padding.
- * Because rem is relative to the document font size
- * when we scale up or down the font size on the document
- * it will affect all properties using rem units for the values.
-*/
-
-/* I am using the em unit for breakpoints
- * The calculation is the following
- * screen size divided by browser base font size
- * As an example: a breakpoint at 980px
- * 980px / 16px = 61.25em
-*/
-
-/* 1200px / 16px = 75em */
 @media (max-width: 75em) {
   html {
     font-size: 10px;
   }
 }
 
-/* 980px / 16px = 61.25em */
 @media (max-width: 61.25em) {
   html {
     font-size: 10px;
   }
 }
 
-/* 460px / 16px = 28.75em */
+
 @media (max-width: 28.75em) {
   html {
     font-size: 10px;
   }
 }
 
-/* Base styles */
+
 
 body {
   font-family: 'Poppins', sans-serif;
-  font-size: 1.8rem; /* 18px */
+  font-size: 2rem; 
   font-weight: 400;
   line-height: 1.4;
   color: #C5C6C7;
@@ -70,7 +52,7 @@ body {
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
-
+  
 }
 
 h1,
@@ -90,11 +72,11 @@ h2 {
 color: #66FCF1;
 }
 p {
-
+  
   font-family: 'Raleway', sans-serif;
   font-weight: 700;
   font-size: 3rem;
-
+ 
 }
 
 
@@ -111,8 +93,6 @@ img {
   display: block;
   width: 100%;
 }
-
-/* nav */
 
 .nav {
   display: flex;
@@ -145,10 +125,6 @@ img {
   padding: 2rem;
 }
 
-.nav-list a:hover {
-  background: var(--main-blue);
-}
-
 .welcome-section {
   display: flex;
   flex-direction: column;
@@ -177,4 +153,62 @@ img {
   max-width: 1280px;
   margin: 0 auto;
   margin-bottom: 6rem;
+}
+
+.project {
+  background: #1F2833;
+  box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
+  border-radius: 2px;
+}
+
+.project-tile{
+  font-size: 3rem;
+  padding: .5rem 0.5rem;
+}
+
+.project-image {
+  height: calc(100% - 6.8rem);
+  width: 100%;
+  object-fit: cover;
+}
+
+/* Contact section */
+
+.contact-section {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  width: 100%;
+  height: 80vh;
+  padding: 0 2rem;
+  
+}
+
+.contact-section-header > h2 {
+  font-size: 6rem;
+}
+.contact-section-header > p {
+  font-style: italic;
+}
+
+.contact-links {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  max-width: 980px;
+  margin-top: 4rem;
+  flex-wrap: wrap;
+}
+
+.contact-details {
+  font-size: 2.4rem;
+  text-shadow: 2px 2px 1px #1f1f1f;
+}
+
+.btn {
+  display: inline-block;
+  padding: 1rem 2rem;
+  border-radius: 2px;
 }
